--- a/podcast.html
+++ b/podcast.html
@@ -8,7 +8,7 @@
 var xhttp = new XMLHttpRequest();
 xhttp.onreadystatechange = function() {
     if (this.readyState == 4 && this.status == 200) {
-    myFunction(this);
+        myFunction(this);
     }
 };
 xhttp.open("GET", "podcast.xml", true);
@@ -16,10 +16,31 @@ xhttp.send();
 
 function myFunction(xml) {
     var xmlDoc = xml.responseXML;
-    document.getElementById("demo").innerHTML =
-    xmlDoc.getElementsByTagName("title")[0].childNodes[0].nodeValue;
+    var items = xmlDoc.getElementsByTagName("item");
+    var output = "";
+
+    for (var i = 0; i < items.length; i++) {
+        var title = items[i].getElementsByTagName("title")[0].childNodes[0].nodeValue;
+        var author = items[i].getElementsByTagName("itunes:author")[0].childNodes[0].nodeValue;
+        var description = items[i].getElementsByTagName("description")[0].childNodes[0].nodeValue;
+        var duration = items[i].getElementsByTagName("itunes:duration")[0].childNodes[0].nodeValue;
+        var pubDate = items[i].getElementsByTagName("pubDate")[0].childNodes[0].nodeValue;
+        var enclosureUrl = items[i].getElementsByTagName("enclosure")[0].getAttribute("url");
+
+        output += "<div>";
+        output += "<h2>" + title + "</h2>";
+        output += "<p><strong>Author:</strong> " + author + "</p>";
+        output += "<p><strong>Description:</strong> " + description + "</p>";
+        output += "<p><strong>Duration:</strong> " + duration + "</p>";
+        output += "<p><strong>Published Date:</strong> " + pubDate + "</p>";
+        output += "<audio controls><source src='" + enclosureUrl + "' type='audio/mpeg'></audio>";
+        output += "</div>";
+    }
+
+    document.getElementById("demo").innerHTML = output;
 }
 </script>
+
 
 </body>
 </html>
