--- a/podcast.html
+++ b/podcast.html
@@ -36,7 +36,9 @@
         }
     </style>
 </head>
-<body>
+<body style="background-color: gray;">
+    <title>The Future in Tech</title>
+    <h3> PODCAST FEED </h3>
 
 <div id="demo"></div>
 
